@@ -1,5 +1,15 @@
 2017-03-16  Mark Lam  <mark.lam@apple.com>
 
+        Fix exception scope verification failures in GenericArgumentsInlines.h.
+        https://bugs.webkit.org/show_bug.cgi?id=165012
+
+        Reviewed by Saam Barati.
+
+        * runtime/GenericArgumentsInlines.h:
+        (JSC::GenericArguments<Type>::defineOwnProperty):
+
+2017-03-16  Mark Lam  <mark.lam@apple.com>
+
         Array concat operation should check for length overflows.
         https://bugs.webkit.org/show_bug.cgi?id=169796
         <rdar://problem/31095276>
